# Fast-Forward-AI500

./: .gitignore  README.md
backend/: .gitignore  NEW-README.md  README.md  clean_database.py  pyproject.toml  requirements.txt
backend/deploy/: DEPLOY.md  fastforward.service  nginx-fastforward.conf
backend/src/: app.py  requirements.txt  seed_data.py
backend/src/configurations/: database_config.py  logging_config.py
backend/src/controllers/: cards_controller.py  dashboard_controller.py  docs_controller.py  goals_controller.py  recommendations_controller.py  shop_controller.py  transactions_controller.py  users_controller.py
backend/src/entities/: card.py  goal.py  transaction.py  user.py
backend/src/enums/: __init__.py  card_type_enum.py  goal_priority_enum.py  goal_status_enum.py  party_type_enum.py  transaction_category_enum.py  transaction_direction_enum.py  transaction_status_enum.py  transaction_type_enum.py  user_role_enum.py
backend/src/models/: goal_create_model.py  goal_update_model.py  shop_models.py  transaction_create_model.py
backend/src/prompts/: agro_bank_services.json  agrobank_recommendations_system.md  agrobank_recommendations_user.md  financial_insights_system.md  financial_insights_user.md  goal_insights_system.md  goal_insights_user.md  goal_timeline_system.md  goal_timeline_user.md  shop_filter_results_system.md  shop_filter_results_user.md  shop_insights_system.md  shop_insights_user.md  shop_search_params_system.md  shop_search_params_user.md  smart_recommendations_system.md  smart_recommendations_user.md  transaction_categorization_system.md  transaction_categorization_user.md
(+119 files in other folders)
